# spotify-autosync

./: .gitignore  README.md  auth.py  config.py  get_auth_code.py  main.py  pyproject.toml  setup.py  storage.py
.github/workflows/: main.yml
spotify_automation/: auth.py  main.py  playlists.py  spotify.py
spotify_autosync/: auth.py  config.py  main.py  playlists.py  spotify.py  storage.py  utils.py
src/spotify_automation/: auth.py  config.py  main.py  playlists.py  spotify.py  storage.py  utils.py
