[project]
name = "spotify_new_music_automation"
version = "0.1.0"
description = "Automates organization of new music in Spotify"
authors = [
    {name = "Prithvi Seri",email = "prithvi.seri@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
